# saio

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TESTING.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
data/: ssh-inventory.example.json
docs/: CLAUDE-INTEGRATION.md
orchestrator/: heartbeat.py  kill_one.py  killer.py  lock.py  mcp_discovery.py  orchestrator.py  perf-snapshot.py  planner.py  requirements.txt  session_manager.py  spawn_deepresearch.py  spawn_single.py  spawner.py  status_writer.py
scripts/: auth-reset.ts  backup-data.ps1  bootstrap-check.ps1  build-sidecar.ts  check-vite-cache.mjs  check-vite-cache.ps1  claim-reissue.ts  cloudflare-tunnel-run.ps1  cloudflare-tunnel-setup.ps1  cron-runner.ts  dev.ps1  diag-orchestrator.ts  download-node-portable.ps1  download-node-portable.sh  elevator-windows.ps1  elevator.ps1  generate-cloudflare-guide-pdf.ts  playwright-adapter.js  register-autostart.ps1  register-elevator.ps1  register-feedback-cron.ps1  register-mcp-discovery.ps1  run-feedback-processor.ps1  saio-init.ps1  saio-stop.ps1  setup-deps-linux.sh  setup-deps-macos.sh  setup-deps-runner.js  setup-deps.ps1  setup-deps.sh  setup.ps1  smoke-v11.md
server/: index.ts
shared/: schemas.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+252 files in other folders)
