[package]
name = "saio"
version = "1.0.0"
description = "SAIO - Smart AI Office (cross-platform Tauri 2 port)"
authors = ["Revolution Marketing <info@revolutionmarketing.us>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "saio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"

[features]
# default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
